force-app/main/default/objects/Activity/fields/Activity_for_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Activity_for_Logged_in_User__c</fullName>
    <formula>IF( 
OR(
   Contact__r.User__r.Id =$User.Id
,  AND(IsTask = TRUE
       , OR ( Owner:User.Id =$User.Id,   CONTAINS( LOWER(Email_Addresses__c), LOWER($User.Email) ) )
       )
   )

, TRUE, FALSE)</formula>
    <label>Activity for Logged in User</label>
    <type>Checkbox</type>
</CustomField>