force-app/main/default/objects/Activity/fields/Client_Participation__c.field-meta.xml
<CustomField>
    <fullName>Client_Participation__c</fullName>
    <label>Client Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GP Only</fullName>
            </value>
            <value>
                <fullName>LP Only</fullName>
            </value>
            <value>
                <fullName>LP with GP Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>