force-app/main/default/objects/Activity/fields/Company_Discussed_1__c.field-meta.xml
<CustomField>
    <fullName>Company_Discussed_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Discussed 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>