force-app/main/default/objects/Activity/fields/Company_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry_Group__c</fullName>
    <description>Related company industry group</description>
    <formula>TEXT(Contact__r.Account.Industry_Group__c)</formula>
    <label>Company Industry Group</label>
    <type>Text</type>
</CustomField>