force-app/main/default/objects/Activity/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>