force-app/main/default/objects/Activity/fields/Company_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Record_Type__c</fullName>
    <description>Record Type (Developer Name) of the Contact&apos;s Account</description>
    <formula>Contact__r.Account.RecordType.DeveloperName</formula>
    <label>Company Record Type</label>
    <type>Text</type>
</CustomField>