force-app/main/default/objects/Activity/fields/Company_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Record_Type_Id__c</fullName>
    <description>Account Record Type Id related to the Contact (Who Id)</description>
    <formula>Contact__r.Account.RecordTypeId</formula>
    <label>Company Record Type Id</label>
    <type>Text</type>
</CustomField>