force-app/main/default/objects/Activity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As of Winter 16 release, we can now add lookup fields to Events.  This field was added to make it easier to pull in contact details via a lookup.  The WhoId cannot be used as it is a polymorphic lookup field and doesn&apos;t allow you to use it as a true relationship field.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>