force-app/main/default/objects/Activity/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Contact&apos;s Email Address</description>
    <formula>Contact__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>