force-app/main/default/objects/Activity/fields/Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type__c</fullName>
    <description>Record Type Developer Name of the Contact</description>
    <formula>Contact__r.RecordType.DeveloperName</formula>
    <label>Contact Record Type</label>
    <type>Text</type>
</CustomField>