force-app/main/default/objects/Activity/fields/Contact_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type_Id__c</fullName>
    <description>Related Contact (WhoId) - Record Type Id</description>
    <formula>Contact__r.RecordTypeId</formula>
    <label>Contact Record Type Id</label>
    <type>Text</type>
</CustomField>