force-app/main/default/objects/Activity/fields/Contact_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_User_Id__c</fullName>
    <description>Contact&apos;s User Id</description>
    <formula>Contact__r.User__c</formula>
    <label>Contact User Id</label>
    <type>Text</type>
</CustomField>