force-app/main/default/objects/Activity/fields/DaScoopComposer__Is_Created_By_Groove__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Is_Created_By_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this activity was automatically created by Groove. This can be used as signal for workflows to trigger (field updates, email alerts, etc.).</inlineHelpText>
    <label>Is Created By Groove</label>
    <type>Checkbox</type>
</CustomField>