force-app/main/default/objects/Activity/fields/DaScoopComposer__Last_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Last_Opened_Date__c</fullName>
    <inlineHelpText>If a task reflects a tracked email, this field indicates the timestamp of the most recent open event (most recent email open by one of the recipients).</inlineHelpText>
    <label>Last Opened Date</label>
    <type>DateTime</type>
</CustomField>