force-app/main/default/objects/Activity/fields/DaScoopComposer__LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__LastModifiedDate__c</fullName>
    <inlineHelpText>is the most recent date/time on which Groove updated the event record or the date/time a logged email was sent by the sender.</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>