force-app/main/default/objects/Activity/fields/DaScoopComposer__Replied__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Replied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>indicates whether Groove detected at least one reply to this Email (Task). This only works if the respective email was logged (e.g. via Groove Email Sync or Groove for Gmail).</inlineHelpText>
    <label>Replied</label>
    <type>Checkbox</type>
</CustomField>