force-app/main/default/objects/Activity/fields/DaScoopComposer__Times_Clicked__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Times_Clicked__c</fullName>
    <inlineHelpText>If a task reflects a tracked email, this field indicates how many times any of the links contained in the email was clicked.</inlineHelpText>
    <label>Times Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>