force-app/main/default/objects/Activity/fields/DaScoopComposer__Times_Opened__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Times_Opened__c</fullName>
    <inlineHelpText>if a task reflects a tracked email, this field indicates how many times the email was opened by any of the recipients.</inlineHelpText>
    <label>Times Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>