force-app/main/default/objects/Activity/fields/DaScoopComposer__vCal_IID__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__vCal_IID__c</fullName>
    <inlineHelpText>is the instance ID of a recurring calendar event or the id of a referenced email. This field is part of Groove integration.</inlineHelpText>
    <label>IID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>