force-app/main/default/objects/Activity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>End Date Portion Only</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>