force-app/main/default/objects/Activity/fields/Event_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Task_Type__c</fullName>
    <description>Custom field updated via workflow rule and field update to combine the type field for both task and event object</description>
    <label>Event/Task Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>