force-app/main/default/objects/Activity/fields/Exclude_From_Activity_List__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Activity_List__c</fullName>
    <formula>IF( AND( IsTask = TRUE,
OR( CreatedBy.Full_User_ID__c  = &apos;00531000007T00hAAC&apos;
,  LEFT( WhatId, 3) = &apos;a30&apos;
,  LEFT( Subject, 17) = &apos;DemandTools Error&apos;
,  LEFT( Subject, 18) = &apos;PeopleImport Error&apos;
,  LEFT( Subject, 24) = &apos;MassImpact Batch Results&apos;
,  LEFT( Subject, 17) = &apos;Pardot List Email&apos;	
,  LEFT( Subject, 19) = &apos;Single Table Dedupe&apos;
,  ISPICKVAL(ActivitySubtype,&apos;Cadence&apos;)

))
, True, False)</formula>
    <label>Exclude From Activity List</label>
    <type>Checkbox</type>
</CustomField>