force-app/main/default/objects/Activity/fields/Followup_Comments__c.field-meta.xml
<CustomField>
    <fullName>Followup_Comments__c</fullName>
    <description>Follow-up Comments</description>
    <label>Follow-up Comments</label>
    <type>TextArea</type>
</CustomField>