force-app/main/default/objects/Activity/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <defaultValue>Today()+1</defaultValue>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>