force-app/main/default/objects/Activity/fields/Followup_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_End_Date__c</fullName>
    <description>Follow Up Date Portion Only</description>
    <label>Follow-up End Date</label>
    <type>Date</type>
</CustomField>