force-app/main/default/objects/Activity/fields/Followup_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Followup_End_Time__c</fullName>
    <description>Follow-up End Time Portion Only</description>
    <label>Follow-up End Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>12:30 AM</fullName>
            </value>
            <value>
                <fullName>01:00 AM</fullName>
            </value>
            <value>
                <fullName>01:30 AM</fullName>
            </value>
            <value>
                <fullName>02:00 AM</fullName>
            </value>
            <value>
                <fullName>02:30 AM</fullName>
            </value>
            <value>
                <fullName>03:00 AM</fullName>
            </value>
            <value>
                <fullName>03:30 AM</fullName>
            </value>
            <value>
                <fullName>04:00 AM</fullName>
            </value>
            <value>
                <fullName>04:30 AM</fullName>
            </value>
            <value>
                <fullName>05:00 AM</fullName>
            </value>
            <value>
                <fullName>05:30 AM</fullName>
            </value>
            <value>
                <fullName>06:00 AM</fullName>
            </value>
            <value>
                <fullName>06:30 AM</fullName>
            </value>
            <value>
                <fullName>07:00 AM</fullName>
            </value>
            <value>
                <fullName>07:30 AM</fullName>
            </value>
            <value>
                <fullName>08:00 AM</fullName>
                <default>true</default>
                <label>08:00 AM</label>
            </value>
            <value>
                <fullName>08:30 AM</fullName>
            </value>
            <value>
                <fullName>09:00 AM</fullName>
            </value>
            <value>
                <fullName>09:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM</fullName>
            </value>
            <value>
                <fullName>01:30 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM</fullName>
            </value>
            <value>
                <fullName>02:30 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>