force-app/main/default/objects/Activity/fields/Followup_Parent__c.field-meta.xml
<CustomField>
    <fullName>Followup_Parent__c</fullName>
    <label>Follow-up Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>