force-app/main/default/objects/Activity/fields/Followup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Start_Date__c</fullName>
    <description>Follow up Start Date Portion Only</description>
    <label>Follow-up Start Date</label>
    <type>Date</type>
</CustomField>