force-app/main/default/objects/Activity/fields/Followup_Sync_To_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Followup_Sync_To_Outlook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Sync To Outlook</label>
    <type>Checkbox</type>
</CustomField>