force-app/main/default/objects/Activity/fields/Followup_Type__c.field-meta.xml
<CustomField>
    <fullName>Followup_Type__c</fullName>
    <label>Follow-up Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
                <default>true</default>
                <label>External</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>