force-app/main/default/objects/Activity/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <description>Added To enter the Industry Group</description>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG - Aerospace Defense and Government</fullName>
            </value>
            <value>
                <fullName>BUS - Business Services</fullName>
            </value>
            <value>
                <fullName>CFR - Consumer Food &amp; Retail</fullName>
            </value>
            <value>
                <fullName>FIG - Financial Institutions</fullName>
            </value>
            <value>
                <fullName>HC - Healthcare</fullName>
            </value>
            <value>
                <fullName>IG - Industrials</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>POW - Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>RE - Real Estate Lodging and Leisure</fullName>
            </value>
            <value>
                <fullName>SOV - Sovereigns</fullName>
            </value>
            <value>
                <fullName>TECH - Technology</fullName>
            </value>
            <value>
                <fullName>TRANS - Transportation &amp; Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>