force-app/main/default/objects/Activity/fields/InternalNotes__c.field-meta.xml
<CustomField>
    <fullName>InternalNotes__c</fullName>
    <description>Using this new field for the Outlook panel.</description>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>