force-app/main/default/objects/Activity/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used presently for follow-up events to indicate completion</description>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>