force-app/main/default/objects/Activity/fields/isFollowUp__c.field-meta.xml
<CustomField>
    <fullName>isFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To recognize the follow-up activity.</description>
    <label>Schedule Follow-up</label>
    <type>Checkbox</type>
</CustomField>