force-app/main/default/objects/Activity/fields/Mask_As_External__c.field-meta.xml
<CustomField>
    <fullName>Mask_As_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mask internal attendees as external for activity purposes</description>
    <label>Mask As External</label>
    <type>Checkbox</type>
</CustomField>