force-app/main/default/objects/Activity/fields/No_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>No_External_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To bypass Validation on External Contact and Make the company discussed as required, If the checkbox is set to true</description>
    <inlineHelpText>If No External Contact is marked, then Companies Discussed entry is required</inlineHelpText>
    <label>No External Contact</label>
    <type>Checkbox</type>
</CustomField>