force-app/main/default/objects/Activity/fields/Notify_Coverage_Team__c.field-meta.xml
<CustomField>
    <fullName>Notify_Coverage_Team__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates the coverage team should be notified of the activity</description>
    <inlineHelpText>Indicates the coverage team should be notified of the activity</inlineHelpText>
    <label>Notify Coverage Team</label>
    <type>Checkbox</type>
</CustomField>