force-app/main/default/objects/Activity/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <externalId>true</externalId>
    <label>ParentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>