force-app/main/default/objects/Activity/fields/PFG_Notification__c.field-meta.xml
<CustomField>
    <fullName>PFG_Notification__c</fullName>
    <inlineHelpText>Send Notification to all PFG members</inlineHelpText>
    <label>PFG Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PFG View Only</fullName>
            </value>
            <value>
                <fullName>PFG Send Email Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>