force-app/main/default/objects/Activity/fields/pi__pardot_source_id__c.field-meta.xml
<CustomField>
    <fullName>pi__pardot_source_id__c</fullName>
    <description>Identifies the Pardot record that caused this activity to be created.</description>
    <externalId>true</externalId>
    <label>Pardot Source Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>