force-app/main/default/objects/Activity/fields/Please_Use_Add_Activity_Instead__c.field-meta.xml
<CustomField>
    <fullName>Please_Use_Add_Activity_Instead__c</fullName>
    <description>Override of the Log a Call (Hack)</description>
    <label>Please Use Add Activity Instead</label>
    <type>Url</type>
</CustomField>