force-app/main/default/objects/Activity/fields/Primary_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Primary_Attendee__c</fullName>
    <description>Primary Attendee Name</description>
    <label>Primary Attendee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>