force-app/main/default/objects/Activity/fields/Primary_Attendee_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Attendee_Id__c</fullName>
    <description>Primary Attendee Id (Should be an HL Employee)</description>
    <externalId>true</externalId>
    <label>Primary Attendee Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>