force-app/main/default/objects/Activity/fields/Primary_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Contact__c</fullName>
    <label>Primary External Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>