force-app/main/default/objects/Activity/fields/Primary_External_Contact_Company__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Contact_Company__c</fullName>
    <label>Primary External Contact Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>