force-app/main/default/objects/Activity/fields/Primary_External_Contact_Company_Link__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Contact_Company_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Primary_External_Contact_Company_Id__c, Primary_External_Contact_Company__c, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary External Contact Company</label>
    <type>Text</type>
</CustomField>