force-app/main/default/objects/Activity/fields/Primary_External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Primary External Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>