force-app/main/default/objects/Activity/fields/Primary_External_Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Contact_Link__c</fullName>
    <description>HYPERLINK FOR REPORTING PURPOSES</description>
    <formula>IF( $User.UITheme == &apos;Theme4d&apos;, 
HYPERLINK(&quot;/lightning/r/Contact/&quot; &amp; Primary_External_Contact_Id__c  &amp;&quot;/view&quot;,  Primary_External_Contact__c, &quot;_self&quot; )
,
HYPERLINK(&quot;/&quot;&amp;Primary_External_Contact_Id__c, Primary_External_Contact__c,&quot;_self&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary External Contact</label>
    <type>Text</type>
</CustomField>