force-app/main/default/objects/Activity/fields/PrintDetails__c.field-meta.xml
<CustomField>
    <fullName>PrintDetails__c</fullName>
    <formula>IF ( 
IsTask = TRUE
,&quot;&quot;,


HYPERLINK($Setup.HL_General__c.Cognos_Protocol__c + $Setup.HL_General__c.Cognos_Domain__c + &quot;/ibmcognos/bi/v1/disp?b_action=cognosViewer&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;ui.object=storeID%28%22i86E8CC1B269E436388547211095B2BCB%22%29&amp;ui.action=run&amp;cv.header=true&amp;cv.toolbar=true&amp;ui_appbar=true&amp;ui_appbar=true&amp;p_p_ActivityId=&quot; + CASESAFEID(BLANKVALUE(ParentId__c,Id))
, &quot;Print&quot;, &quot;_blank&quot;))</formula>
    <label>Print Details</label>
    <type>Text</type>
</CustomField>