force-app/main/default/objects/Activity/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Private, viewable to create/owner only</description>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>