force-app/main/default/objects/Activity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Type</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activist Advisory</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>CVAS - Corporate Valuation Advisory Services</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Fund Opinions</fullName>
            </value>
            <value>
                <fullName>IFA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portfolio Valuation &amp; Advisory</fullName>
            </value>
            <value>
                <fullName>Sellside</fullName>
            </value>
            <value>
                <fullName>TAS - Due Diligence Services</fullName>
            </value>
            <value>
                <fullName>Tech+IP Advisory</fullName>
            </value>
            <value>
                <fullName>Transaction Opinions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>